model training completed

--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 2508,
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 6,
@@ -947,6 +947,239 @@
    "outputs": [],
    "source": [
     "df.to_csv(\"preprocessed_csv.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First 1 million data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\"preprocessed_csv.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>categories</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>hep-ph</td>\n",
+       "      <td>calcul prompt diphoton product cross section t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>math.CO cs.CG</td>\n",
+       "      <td>sparsitycertifi graph decomposit describ new a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>physics.gen-ph</td>\n",
+       "      <td>evolut earthmoon system base dark matter field...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>math.CO</td>\n",
+       "      <td>determin stirl cycl number count unlabel acycl...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>math.CA math.FA</td>\n",
+       "      <td>dyadic lambdaalpha lambdaalpha paper show comp...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        categories                                               text\n",
+       "0           hep-ph  calcul prompt diphoton product cross section t...\n",
+       "1    math.CO cs.CG  sparsitycertifi graph decomposit describ new a...\n",
+       "2   physics.gen-ph  evolut earthmoon system base dark matter field...\n",
+       "3          math.CO  determin stirl cycl number count unlabel acycl...\n",
+       "4  math.CA math.FA  dyadic lambdaalpha lambdaalpha paper show comp..."
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2276449 entries, 0 to 2276448\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column      Dtype \n",
+      "---  ------      ----- \n",
+      " 0   categories  object\n",
+      " 1   text        object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 34.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'proactiv intervent downtrend employe attrit use artifici intellig techniqu predict employe attrit beforehand enabl manag take individu prevent action use ensembl classif model techniqu linear regress model could predict accur employe predict lead time separ individu reason caus attrit prior intim employe attrit enabl manag take prevent action retain employe manag busi consequ attrit deploy model help downtrend employe attrit help manag manag team effect model cover natur calam unforeseen event occur individu level like accid death etc'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[999_999].text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Random motion on finite rings, II: Noncommutative rings  We extend our previous study of Markov chains on finite commutative rings\\n(arXiv:1605.05089) to arbitrary finite rings with identity. At each step, we\\neither add or multiply by a randomly chosen element of the ring, where the\\naddition (resp. multiplication) distribution is uniform (resp. conjugacy\\ninvariant). We prove explicit formulas for some of the eigenvalues of the\\ntransition matrix and give lower bounds on their multiplicities. We also give\\nrecursive formulas for the stationary distribution and prove that the mixing\\ntime is bounded by an absolute constant. For the matrix rings $M_2(\\\\mathbb\\nF_q),$ we compute the entire spectrum explicitly using the representation\\ntheory of $\\\\text{GL}_2(\\\\mathbb F_q),$ as well as the stationary probabilities.\\n'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[1_000_000].text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_data = data.iloc[0:999_999]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 999999 entries, 0 to 999998\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column      Non-Null Count   Dtype \n",
+      "---  ------      --------------   ----- \n",
+      " 0   categories  999999 non-null  object\n",
+      " 1   text        999999 non-null  object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 15.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         calcul prompt diphoton product cross section t...\n",
+       "1         sparsitycertifi graph decomposit describ new a...\n",
+       "2         evolut earthmoon system base dark matter field...\n",
+       "3         determin stirl cycl number count unlabel acycl...\n",
+       "4         dyadic lambdaalpha lambdaalpha paper show comp...\n",
+       "                                ...                        \n",
+       "999994    dynam coupl dilut magnet impur quantum spin li...\n",
+       "999995    recognis cardiac abnorm wearabl devic photople...\n",
+       "999996    evolut skyrmion crystal fe co si like quasi tw...\n",
+       "999997    benedick amrein berthier type theorem relat tw...\n",
+       "999998    constraint scalar tensor model gauss bonnet co...\n",
+       "Name: text, Length: 999999, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_data.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_data.to_csv(\"first 1 million.csv\", index = False)"
    ]
   },
   {
