Building Recommendation System

--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -375,8 +375,8 @@
     "# and creating a set out of the resultant list.\n",
     "unique_categories = {}\n",
     "for row in categories:\n",
-    "  for category in row:\n",
-    "    unique_categories[category] = unique_categories.get(category, 0) + 1\n",
+    "    for category in row:\n",
+    "        unique_categories[category] = unique_categories.get(category, 0) + 1\n",
     "\n",
     "print(f\"Num. unique categories: {len(unique_categories)}\")"
    ]
@@ -1196,9 +1196,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "aifellowship",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "aifellowship"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1210,7 +1210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
